# financial-bayes

./: AGENTS.md  README.md  pyproject.toml
notebooks/: oil_price_analysis.py  sunlight-market.ipynb
