[project]
name = "financial-bayes"
version = "0.0.0"
description = "Simple, challenging financial applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=6.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "ruff>=0.14.10",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
    "yfinance>=0.2.66",
]
